recursion.cons.min.Min.scala.error
Compilation error:
Min:4: error: illegal start of simple pattern
 var List[Int] t = l.tail;
                 ^Min:4: error: '=' expected but ';' found.
 var List[Int] t = l.tail;
                         ^